@@ -1,6 +1,10 @@
 /***********************************************************************
 X3 ChangeLog
 
+2008-03-29  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
+
+	* src/proto-p10.c: Ignore SNO messages.
+
 2008-03-28  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
 
 	* configure: Regenerated.
